# image-decode-bench

./: Cargo.toml  README.md  image_decode_bench.js  image_decode_bench_bg.wasm  index.html
.cargo/: config.toml
.github/workflows/: pages.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
